# perfetto

./: BUILD.gn
demos/: BUILD.gn  example.cc  example_console.cc  example_custom_data_source.cc  example_system_wide.cc  trace_categories.cc  trace_categories.h
include/perfetto/tracing/internal/: track_event_macros.h
